--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,17 @@ a:visited {
 
 h1 {
   font-size: 1.728rem;
+  margin-bottom: 96px;
+}
+
+h2 {
+  font-size: 1.728rem;
+  margin-top: 48px;
   margin-bottom: 12px;
+}
+
+h2:first-of-type {
+  margin-top: 0;
 }
   
 .container {
@@ -42,7 +52,7 @@ header {
   margin-bottom: 72px;
 }
 
-header p {
+h1 {
   color: #838C91;
   font-weight: 700;
   font-size: 1rem;
@@ -51,7 +61,7 @@ header p {
   text-decoration: none;
 }
 
-header span {
+h1 span {
   font-weight: 400;
 }
 
@@ -70,7 +80,7 @@ article {
   margin-bottom: 48px;
 }
 
-article ul {
+ul {
   margin-left: 0;
   list-style-type: none;
 }
@@ -78,5 +88,6 @@ article ul {
 footer {
   font-size: 0.833rem;
   color: #838C91;
+  margin-top: 96px;
   margin-bottom: 48px;
 }
