--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,6 +16,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1rem;
   color: #444;
+  background-color: rgb(244, 247, 246);
   line-height: 1.5;
   margin-top: 48px;
 }
