--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <i class="fab fa-github"></i> <a href="{{ site.github_repository }}">Quelltext & Kolophon</a>
+    <i class="fab fa-github"></i> <a href="{{ site.github_repository }}">Quelltext</a>
 </footer>
