--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,7 +44,7 @@ h2:first-of-type {
   
 .container {
   max-width: 35rem;
-  margin: 0 auto;
+  margin: 0 auto 2rem auto;
   padding-left: 16px;
   padding-right: 16px;
 }
